# zobra-slsa

./: .slsa-goreleaser.yml  Dockerfile  EXAMPLE_USAGE.md  GENERIC_SLSA_GUIDE.md  GO_SLSA_SUMMARY.md  README-GO.md  README.md  README_GENERIC_SLSA.md  SLSA_FINDINGS_SUMMARY.md  SLSA_IMPLEMENTATION.md  SLSA_REQUIREMENTS.md  VERIFICATION.md  WORKFLOWS.md  actions-test.tgz  attestations.json  convert_github_attestation.py  coverage.xml  create_release.md  custom.txt  demo.txt  demo_all_slsa_scenarios.sh  demo_complete_slsa_flow.sh  demo_without_slsa.py  example.py  foo.txt  generic-slsa-provenance-generic.intoto.jsonl  generic-slsa-provenance-go.intoto.jsonl  go.mod  main.go  myapp  myapp-fresh  poc_demo.py  pyproject.toml  verify_generic_slsa.sh  verify_official_slsa.sh  verify_slsa.sh  verify_slsa_complete.sh  zobra-0.1.0-py3-none-any.whl  zobra-0.1.4-py3-none-any.whl
.github/workflows/: container-slsa.yml  generic-slsa.yml  github-attestations.yml  go-slsa-build.yml  go-slsa-generic.yml  python-slsa-trusted.yml  release.yml  test.yml
artifacts/: README.md
artifacts/python/: official-slsa-attestation.json
generic-slsa-artifacts-generic/: myapp
generic-slsa-artifacts-go/: zobra-go-darwin-amd64  zobra-go-linux-amd64
generic-slsa-artifacts-python/: zobra-0.1.4-py3-none-any.whl
generic-slsa-provenance-python.intoto.jsonl/: generic-slsa-provenance-python.intoto.jsonl
generic-test/: Makefile  README.md  main.cpp
tests/: __init__.py  test_zobra.py
zobra/: __init__.py  core.py
zobra.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+6 files in other folders)
